...
        app:layout_constraintBottom_toTopOf="@+id/tab_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
...


    </com.google.android.material.tabs.TabLayout>

    <Button
        android:visibility="invisible"
        android:id="@+id/btn_getStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="@drawable/btn_gradient_style"
        android:text="Get Started"
        android:textColor="#fff"
...
